<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRecycleViewBackground"
    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/textView_display_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txtView_temp"
        android:textColor="@color/cardview_light_background"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cityname" />

    <EditText
        android:id="@+id/editText_city_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/txt_city_search"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_city_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_city_search"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_search_button"
        android:contentDescription="search cities"
        android:onClick="searchCity"
        android:tint="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="@+id/editText_city_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_city_search"
        app:layout_constraintTop_toTopOf="@+id/editText_city_search"
        app:srcCompat="@drawable/ic_search_black_24dp" />

    <TextView
        android:id="@+id/textView_cityname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtView_cityName"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_city_search" />

    <ImageView
        android:id="@+id/imageView_weatherIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="weather icon image"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_display_temp"
        tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

    <TextView
        android:id="@+id/textView_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtView_weather_description"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_weatherIcon" />

    <TableLayout
        android:id="@+id/table_sunrise_sunset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/table_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/textView_display_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtView_display_sunrise"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_display_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtView_display_sunset"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Sunrise"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Sunset"
                android:textColor="@android:color/darker_gray" />
        </TableRow>


    </TableLayout>


    <TableLayout
        android:id="@+id/table_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/textView_display_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtView_display_humidity"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_display_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtView_display_pressure"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_display_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtView_display_windspeed"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txtView_humidity"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txtView_pressure"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txtView_windspeed"
                android:textColor="@android:color/darker_gray" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView_todays_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txtView_todays_date"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_weather_description"
        tools:text="@string/txtView_todays_date" />


</androidx.constraintlayout.widget.ConstraintLayout>